# train-ticket-auto-query

./: .env.example  Dockerfile  Dockerfile.timed-task  README.md  build-and-run.sh  docker-README.md  docker-compose.yml  docker-entrypoint.sh  docker-timed-task-entrypoint.sh  example.py  pyproject.toml  queries.py  requirements.txt  scenarios.py  setup.py  start_timed_task.bat  start_timed_task.sh  test_login.py
archive/: README.md
archive/old_scripts/: atomic_queries.py  config.py  main.py  test_connection.py  utils.py
docs/: stress_testing.md
examples/: __init__.py  example.py
src/: __init__.py  main.py  stress.py  timed_task.py
src/core/: __init__.py  atomic_queries.py  queries.py
src/scenarios/: __init__.py  runners.py  scenarios.py
src/utils/: __init__.py  config.py  helpers.py
src/web/: app.py
src/web/templates/: index.html
tests/: __init__.py  test_connection.py  test_login.py
